get App imputations from the webservice

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -113,7 +113,8 @@
         "ribbon": {
             "dev": "Development"
         },
-        "item-count": "Showing {{first}} - {{second}} of {{total}} items."
+        "item-count": "Showing {{first}} - {{second}} of {{total}} items.",
+        "noDataFound": "No element Found."
     },
     "entity": {
         "action": {
