--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -113,7 +113,8 @@
         "ribbon": {
             "dev": "Développement"
         },
-        "item-count": "Affichage {{first}} - {{second}} de {{total}} items."
+        "item-count": "Affichage {{first}} - {{second}} de {{total}} items.",
+        "noDataFound": "Aucun élément trouvé."
     },
     "entity": {
         "action": {
