--- a/src/main/webapp/i18n/fr/imputation.json
+++ b/src/main/webapp/i18n/fr/imputation.json
@@ -29,7 +29,7 @@
             "manDay": "Durée en jour/homme",
             "monthlyImputation": "Imputation monsuelle",
             "imputationType": "Type d'imputation",
-            "project_code": "Code projet",
+            "project_code": "Projet",
             "start_date": "Date début",
             "end_date": "Date fin",
             "difference": "Différence",
