render a message when user did not submit form yet

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -114,7 +114,8 @@
             "dev": "Development"
         },
         "item-count": "Showing {{first}} - {{second}} of {{total}} items.",
-        "noDataFound": "No element Found."
+        "noDataFound": "No element Found.",
+        "nothingToShow": "There is nothing to show, please fill and submit the form."
     },
     "entity": {
         "action": {
