statistics frequency notifications per team

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -33,6 +33,8 @@
                 "compare": "compare",
                 "upload_getTimesheet": "Upload & get PPMC timesheet",
                 "getTimesheet": "Get PPMC timesheet",
+                "newUpload": "Upload a new PPMC file",
+                "fileUploadedAlredy": "A PPMC file is already uploaded",
                 "authenticateToTbp": "Authenticate",
                 "TbpAuthTitle": "TBP Authentication"
             },
