get and render jira imputations

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -23,8 +23,10 @@
                 "app-timesheet": "APP Timesheet",
                 "tbp-timesheet": "TBP Timesheet",
                 "ppmc-timesheet": "PPMC Timesheet",
+                "jira-timesheet": "JIRA Timesheet",
                 "importTBP": "Import TBP",
                 "importAPP": "Import APP",
+                "importJira": "Import JIRA",
                 "comparison": "Comparison",
                 "app-vs-tbp": "APP VS TBP",
                 "advanced-app-vs-tbp": "APP VS TBP - Advanced",
