--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -23,8 +23,10 @@
                 "app-timesheet": "Timesheet d'APP",
                 "tbp-timesheet": "Timesheet TBP",
                 "ppmc-timesheet": "Timesheet PPMC",
+                "jira-timesheet": "Timesheet JIRA",
                 "importTBP": "Importer TBP",
                 "importAPP": "Importer APP",
+                "importJira": "Importer JIRA",
                 "app-vs-tbp": "APP VS TBP",
                 "advanced-app-vs-tbp": "APP VS TBP - Détaillé",
                 "compare": "comparer",
