--- a/src/main/webapp/i18n/fr/imputation.json
+++ b/src/main/webapp/i18n/fr/imputation.json
@@ -5,6 +5,7 @@
                 "appTitle": "Imputations APP",
                 "tbpTitle": "Imputations TBP",
                 "ppmcTitle": "Imputations PPMC",
+                "jiraTitle": "Imputations JIRA",
                 "APPvsTBP-title": "APP TBP Comparaison",
                 "createLabel": "Créer un nouveau Imputation",
                 "createOrEditLabel": "Créer ou éditer un Imputation",
