--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -36,7 +36,9 @@
                 "newUpload": "Upload a new PPMC file",
                 "fileUploadedAlredy": "A PPMC file is already uploaded",
                 "authenticateToTbp": "Authenticate",
-                "TbpAuthTitle": "TBP Authentication"
+                "tbpAuthTitle": "TBP Authentication",
+                "statisticsPerTeam": "Team statistics",
+                "globalStatistics": "Global statistics"
             },
             "account": {
                 "main": "Account",
@@ -62,8 +64,8 @@
             },
             "language": "Language",
             "statistics": "Statistics",
-            "gapTeamStatistics": "Statistics per team",
-            "gapVariationStatistics": "global Statistics"
+            "gapTeamStatistics": "Per team",
+            "gapVariationStatistics": "global"
         },
         "form": {
             "username": "Username",
