--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -39,6 +39,7 @@
                 "fileUploadedAlredy": "A PPMC file is already uploaded",
                 "authenticateToTbp": "Authenticate",
                 "tbpAuthTitle": "TBP Authentication",
+                "jiraAuthTitle": "JIRA Authentication",
                 "statisticsPerTeam": "Team statistics",
                 "globalStatistics": "Global statistics"
             },
@@ -178,7 +179,9 @@
         "differentMonths": "Sorry, the selected month and the month of the file must be the same!",
         "newUpload": "No PPMC history for these params, you should upload a new PPMC file.",
         "tbp_bad_credentials": "Bad TBP Credentials!",
-        "tbp_invalid_inputs": "TBP username & password are required"
+        "tbp_invalid_inputs": "TBP username & password are required",
+        "jira_bad_credentials": "Bad JIRA Credentials!",
+        "jira_bad_url": "Jira url does not exist!"
     },
     "footer": "©SQLI Maroc {{ year }} - All rights reserved"
 }
