refactor jiraImputationRessourceService and Home page

--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,6 +1,7 @@
 {
     "home": {
         "title": "Welcome",
+        "appTitle": "Imputation gaps detection system",
         "subtitle": "This is your homepage",
         "logged": {
             "message": "You are logged in as user \"{{username}}\"."
