--- a/src/main/webapp/i18n/fr/home.json
+++ b/src/main/webapp/i18n/fr/home.json
@@ -1,6 +1,7 @@
 {
     "home": {
         "title": "Bienvenue",
+        "appTitle": "Système de détection des écarts d'imputations",
         "subtitle": "Ceci est votre page d'accueil",
         "logged": {
             "message": "Vous êtes connecté en tant que \"{{username}}\"."
