add entity appTbpIdentifier & its relation with team & new create/edit actions of team

--- a/src/main/webapp/i18n/en/team.json
+++ b/src/main/webapp/i18n/en/team.json
@@ -19,6 +19,7 @@
             "name": "Name",
             "displayName": "Display Name",
             "agresso": "Agresso",
+            "idTbp": "Id TBP",
             "projectType": "Project Type",
             "deliveryCoordinator": "Delivery Coordinator",
             "collaborator": "Collaborator",
