edit code for timesheets consultation and comparison after editing architecture

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -141,7 +141,9 @@
             "edit": "Edit",
             "open": "Open",
             "save": "Save",
-            "view": "View"
+            "view": "View",
+            "removeAppTbpIdentifier": "Remove",
+            "addAppTbpIdentifier": "Add"
         },
         "detail": {
             "field": "Field",
