add project type to team creation and render missions of connected delco's team

--- a/src/main/webapp/i18n/en/team.json
+++ b/src/main/webapp/i18n/en/team.json
@@ -18,6 +18,7 @@
             },
             "name": "Name",
             "displayName": "Display Name",
+            "mission": "Mission",
             "agresso": "Agresso",
             "idTbp": "Id TBP",
             "projectType": "Project Type",
