--- a/src/main/webapp/i18n/fr/team.json
+++ b/src/main/webapp/i18n/fr/team.json
@@ -18,6 +18,7 @@
             },
             "name": "Nom",
             "displayName": "Nom court",
+            "mission": "Mission",
             "agresso": "Agresso",
             "idTbp": "Id TBP",
             "projectType": "Type du projet",
